--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
+Data/coast.csv filter=lfs diff=lfs merge=lfs -text
+Data/mountains.csv filter=lfs diff=lfs merge=lfs -text
+Data/plains.csv filter=lfs diff=lfs merge=lfs -text
 Data/* filter=lfs diff=lfs merge=lfs -text
